--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         python-version: ['3.10']
         include:
           - os: ubuntu-24.04
-            compiler_cc: clang
-            compiler_cxx: clang++
+            compiler_cc: clang-14
+            compiler_cxx: clang++-14
 
     steps:
       - name: Install Linux packages
